--- a/EnglishStart.html
+++ b/EnglishStart.html
@@ -12,13 +12,12 @@
 		<div class="container my-auto">
 			<div class="row">
 				<div class="col-lg-12 my-auto">
-					<h1><span>English First</span></h1>
+					<h1><span>English First 1</span></h1>
 					<hr>
 				</div>
 				<div class="col-lg-12 my-auto">
 					<!-- Begin Mailchimp Signup Form -->
 					<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<div id="mc_embed_signup">
 	<form action="https://inforeklama.us17.list-manage.com/subscribe/post?u=02920f5821bcd2c6ce59434d7&amp;id=073b3d121d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 		<div id="mc_embed_signup_scroll">
 			</div>	<div id="mce-responses" class="clear">
@@ -27,11 +26,7 @@
 			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_02920f5821bcd2c6ce59434d7_073b3d121d" tabindex="-1" value=""></div>
 			<div class="clear"><input type="submit" class="btn" value="Find out more" name="Find out more" id="mc-embedded-subscribe" class="button"></div>
-		</div>
 	</form>
-</div>
-</div>
-</div>
 </div>
 </header>
 </body>
