--- a/EnglishStart.html
+++ b/EnglishStart.html
@@ -25,7 +25,7 @@
 				<div class="response" id="mce-success-response" style="display:none"></div>
 			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_02920f5821bcd2c6ce59434d7_073b3d121d" tabindex="-1" value=""></div>
-			<div class="clear"><input type="submit" class="btn" value="Find out more" name="Find out more" id="mc-embedded-subscribe" class="button"></div>
+			<input type="submit" class="btn" value="Find out more" name="Find out more" id="mc-embedded-subscribe" class="button">
 	</form>
 </div>
 </header>
