--- a/EnglishStart.html
+++ b/EnglishStart.html
@@ -12,7 +12,7 @@
 		<div class="container my-auto">
 			<div class="row">
 				<div class="col-lg-12 my-auto">
-					<h1><span>English First 1</span></h1>
+					<h1><span>English First 2</span></h1>
 					<hr>
 				</div>
 				<div class="col-lg-12 my-auto">
@@ -20,7 +20,7 @@
 					<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 	<form action="https://inforeklama.us17.list-manage.com/subscribe/post?u=02920f5821bcd2c6ce59434d7&amp;id=073b3d121d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 		<div id="mc_embed_signup_scroll">
-			</div>	<div id="mce-responses" class="clear">
+			</div>	<div id="mce-responses">
 				<div class="response" id="mce-error-response" style="display:none"></div>
 				<div class="response" id="mce-success-response" style="display:none"></div>
 			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
