--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="container my-auto">
 			<div class="row">
 				<div class="col-lg-12 my-auto">
-					<h1><span>English First 5</span></h1>
+					<h1><span>English First 6</span></h1>
 					<hr>
 				</div>
 				<div class="col-lg-12 my-auto">
@@ -24,7 +24,7 @@
 				<div class="response" id="mce-error-response" style="display:none"></div>
 				<div class="response" id="mce-success-response" style="display:none"></div>
 			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-			<input type="submit" class="btn" value="Find out more" name="Find out more" id="mc-embedded-subscribe">
+			<input type="submit" class="btn" value="Find out more" name="Find out more">
 	</form>
 </div>
 </header>
