--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="container my-auto">
 			<div class="row">
 				<div class="col-lg-12 my-auto">
-					<h1><span>English First 6</span></h1>
+					<h1><span>English First</span></h1>
 					<hr>
 				</div>
 				<div class="col-lg-12 my-auto">
