--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style3.css">
 	<link href="https://fonts.googleapis.com/css2?family=Revalia&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
 </head>
 <body>
 	<header class="background text-center d-flex">
 		<div class="container my-auto">
 			<div class="row">
 				<div class="col-lg-12 my-auto">
-					<h1><span>English First</span></h1>
+					<h1 class="animate__animated animate__zoomInDown"><span>English First</span></h1>
 					<hr>
 				</div>
 				<div class="col-lg-12 my-auto">
